[gd_scene load_steps=6 format=3 uid="uid://cknmxcmha2chj"]

[ext_resource type="Script" uid="uid://ce2fr0nossk1y" path="res://level_select.gd" id="1_vomi7"]
[ext_resource type="FontFile" uid="uid://bk2frgbrkj3f6" path="res://kings-of-kings-lynn/KingsofKingsLynn.otf" id="2_wevku"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uebnx"]
bg_color = Color(1, 0.819608, 0.317647, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vomi7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vomi7"]
bg_color = Color(0.710963, 0.545192, 0.622763, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vomi7")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_uebnx")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -192.0
offset_right = 192.0
offset_bottom = 105.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.710963, 0.545192, 0.622763, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_wevku")
theme_override_font_sizes/font_size = 100
text = "LEVEL SELECT"

[node name="LevelButtons" type="Panel" parent="."]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_right = 0.075
anchor_bottom = 0.194
offset_right = -46.4
offset_bottom = -85.712
theme_override_styles/panel = SubResource("StyleBoxTexture_vomi7")

[node name="Button1" type="Button" parent="LevelButtons"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 41.0
offset_top = 237.0
offset_right = 159.0
offset_bottom = 350.0
grow_vertical = 2
pivot_offset = Vector2(1206, -152)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 0.819608, 0.317647, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_wevku")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_vomi7")
text = "1"

[node name="Coins1" type="Label" parent="LevelButtons/Button1"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.008
anchor_right = -0.008
offset_left = 19.944
offset_top = 121.0
offset_right = 100.944
offset_bottom = 144.0
text = "Coins 0/10"

[node name="Button2" type="Button" parent="LevelButtons"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 228.0
offset_top = 237.0
offset_right = 346.0
offset_bottom = 350.0
grow_vertical = 2
pivot_offset = Vector2(1206, -152)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 0.819608, 0.317647, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_wevku")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_vomi7")
text = "2"

[node name="Coins2" type="Label" parent="LevelButtons/Button2"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.008
anchor_right = -0.008
offset_left = 19.944
offset_top = 121.0
offset_right = 100.944
offset_bottom = 144.0
text = "Coins 0/10"

[node name="Button3" type="Button" parent="LevelButtons"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 409.0
offset_top = 237.0
offset_right = 527.0
offset_bottom = 350.0
grow_vertical = 2
pivot_offset = Vector2(1206, -152)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 0.819608, 0.317647, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_wevku")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_vomi7")
text = "3"

[node name="Coins3" type="Label" parent="LevelButtons/Button3"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.008
anchor_right = -0.008
offset_left = 19.944
offset_top = 121.0
offset_right = 100.944
offset_bottom = 144.0
text = "Coins 0/10"

[node name="Button4" type="Button" parent="LevelButtons"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 592.0
offset_top = 237.0
offset_right = 710.0
offset_bottom = 350.0
grow_vertical = 2
pivot_offset = Vector2(1206, -152)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 0.819608, 0.317647, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_wevku")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_vomi7")
text = "4"

[node name="Coins4" type="Label" parent="LevelButtons/Button4"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.008
anchor_right = -0.008
offset_left = 19.944
offset_top = 121.0
offset_right = 100.944
offset_bottom = 144.0
text = "Coins 0/10"

[node name="Button5" type="Button" parent="LevelButtons"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 780.0
offset_top = 237.0
offset_right = 898.0
offset_bottom = 350.0
grow_vertical = 2
pivot_offset = Vector2(1206, -152)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 0.819608, 0.317647, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_wevku")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_vomi7")
text = "5"

[node name="Coins5" type="Label" parent="LevelButtons/Button5"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.008
anchor_right = -0.008
offset_left = 19.944
offset_top = 121.0
offset_right = 100.944
offset_bottom = 144.0
text = "Coins 0/10"

[node name="Button6" type="Button" parent="LevelButtons"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 987.0
offset_top = 237.0
offset_right = 1105.0
offset_bottom = 350.0
grow_vertical = 2
pivot_offset = Vector2(1206, -152)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 0.819608, 0.317647, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_wevku")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_vomi7")
text = "6"

[node name="Coins6" type="Label" parent="LevelButtons/Button6"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.008
anchor_right = -0.008
offset_left = 19.944
offset_top = 121.0
offset_right = 100.944
offset_bottom = 144.0
text = "Coins 0/10"

[connection signal="pressed" from="LevelButtons/Button1" to="." method="_on_button_1_pressed"]
